--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,128 +1,30 @@
-# ═══════════════════════════════════════════════════════════════
-# 🌐 CRM Pro — Nginx Configuration
-# Единая точка входа для всех запросов
-# ═══════════════════════════════════════════════════════════════
-
-upstream php-fpm {
-    server app:9000;
-}
-
 server {
     listen 80;
-    listen [::]:80;
     server_name _;
-    
     root /var/www/html/public;
-    index index.php index.html;
+    index index.php;
 
-    # Логирование
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
-
-    # Charset
     charset utf-8;
-
-    # Максимальный размер загружаемых файлов
     client_max_body_size 50M;
 
-    # Сжатие
-    gzip on;
-    gzip_vary on;
-    gzip_min_length 1024;
-    gzip_proxied any;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-
-    # Security headers
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-
-    # Health check endpoint — для Docker healthcheck
-    location /health {
-        access_log off;
-        return 200 "OK\n";
-        add_header Content-Type text/plain;
-    }
-
-    # Nginx status — для мониторинга
-    location /nginx-status {
-        stub_status on;
-        access_log off;
-        allow 127.0.0.1;
-        allow 172.0.0.0/8;
-        deny all;
-    }
-
-    # Основной location
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    # API Webhooks — специальная обработка для Meta и Telegram
-    location /api/webhooks/ {
-        # Убираем лимиты для вебхуков
-        client_max_body_size 10M;
-        
-        # Передаем реальный IP и протокол
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port $server_port;
-        
-        # Увеличенный таймаут для долгих операций
-        proxy_read_timeout 120s;
-        proxy_connect_timeout 60s;
-        
-        # Передаем в PHP
-        try_files $uri /index.php?$query_string;
-    }
-
-    # PHP обработка
-    location ~ \.php$ {
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php-fpm;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-        
-        # Передаем заголовки для определения HTTPS
-        fastcgi_param HTTP_X_FORWARDED_PROTO $http_x_forwarded_proto;
-        fastcgi_param HTTP_X_FORWARDED_FOR $http_x_forwarded_for;
-        fastcgi_param HTTP_X_REAL_IP $http_x_real_ip;
-        fastcgi_param HTTPS $https if_not_empty;
-        
-        # Таймауты
-        fastcgi_read_timeout 120s;
-        fastcgi_send_timeout 120s;
-        fastcgi_connect_timeout 60s;
-        
-        # Буферы
-        fastcgi_buffer_size 128k;
-        fastcgi_buffers 256 16k;
-        fastcgi_busy_buffers_size 256k;
-        fastcgi_temp_file_write_size 256k;
-    }
-
-    # Статика — кэширование
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
+    location = /health {
         access_log off;
-        try_files $uri =404;
+        return 200 "OK";
     }
 
-    # Скрываем служебные файлы
+    location ~ \.php$ {
+        fastcgi_pass app:9000;
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        include fastcgi_params;
+        fastcgi_read_timeout 300;
+    }
+
     location ~ /\.(?!well-known).* {
-        deny all;
-    }
-
-    # Deny access to sensitive files
-    location ~* (composer\.(json|lock)|package(-lock)?\.json|\.env|artisan)$ {
         deny all;
     }
 }
