--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,42 +1,32 @@
 # ═══════════════════════════════════════════════════════════════
-# 🚀 CRM Pro — Production Docker Compose
-# Master Orchestrator: Все сервисы в едином механизме
+# 🚀 CRM Pro — Docker Compose (Simplified)
 # ═══════════════════════════════════════════════════════════════
 
 services:
-  # ─────────────────────────────────────────────────────────────
-  # 🗄 PostgreSQL Database
-  # ─────────────────────────────────────────────────────────────
+  # 🗄 PostgreSQL
   db:
     image: postgres:16-alpine
     container_name: crm_db
     restart: always
     environment:
-      POSTGRES_DB: ${DB_DATABASE:-crm_db}
-      POSTGRES_USER: ${DB_USERNAME:-crm_user}
-      POSTGRES_PASSWORD: ${DB_PASSWORD:-CrmSecurePass2024}
-      POSTGRES_INITDB_ARGS: "--encoding=UTF8 --locale=en_US.UTF-8"
+      POSTGRES_DB: crm_db
+      POSTGRES_USER: crm_user
+      POSTGRES_PASSWORD: CrmSecurePass2024
     volumes:
       - crm_db_data:/var/lib/postgresql/data
     networks:
       - crm_network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USERNAME:-crm_user} -d ${DB_DATABASE:-crm_db}"]
+      test: ["CMD-SHELL", "pg_isready -U crm_user -d crm_db"]
       interval: 5s
       timeout: 5s
       retries: 5
-      start_period: 10s
 
-  # ─────────────────────────────────────────────────────────────
-  # 🔴 Redis Cache & Queue
-  # ─────────────────────────────────────────────────────────────
+  # 🔴 Redis
   redis:
     image: redis:7-alpine
     container_name: crm_redis
     restart: always
-    command: redis-server --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru
-    volumes:
-      - crm_redis_data:/data
     networks:
       - crm_network
     healthcheck:
@@ -44,34 +34,28 @@ services:
       interval: 5s
       timeout: 3s
       retries: 5
-      start_period: 5s
 
-  # ─────────────────────────────────────────────────────────────
-  # 🐘 Laravel PHP-FPM Application
-  # ─────────────────────────────────────────────────────────────
+  # 🐘 Laravel App (PHP-FPM)
   app:
     build:
       context: .
       dockerfile: Dockerfile
-      target: app
     container_name: crm_app
     restart: always
     working_dir: /var/www/html
     volumes:
       - .:/var/www/html
-      - ./storage/logs:/var/www/html/storage/logs
       - /var/www/html/vendor
-      - /var/www/html/node_modules
     environment:
-      APP_ENV: ${APP_ENV:-production}
-      APP_DEBUG: ${APP_DEBUG:-false}
+      APP_ENV: production
+      APP_DEBUG: "false"
       APP_URL: ${APP_URL:-http://localhost:8000}
       DB_CONNECTION: pgsql
       DB_HOST: db
       DB_PORT: 5432
-      DB_DATABASE: ${DB_DATABASE:-crm_db}
-      DB_USERNAME: ${DB_USERNAME:-crm_user}
-      DB_PASSWORD: ${DB_PASSWORD:-CrmSecurePass2024}
+      DB_DATABASE: crm_db
+      DB_USERNAME: crm_user
+      DB_PASSWORD: CrmSecurePass2024
       REDIS_HOST: redis
       REDIS_PORT: 6379
       CACHE_STORE: redis
@@ -84,168 +68,106 @@ services:
         condition: service_healthy
     networks:
       - crm_network
-    healthcheck:
-      test: ["CMD-SHELL", "php-fpm-healthcheck || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 3
-      start_period: 30s
 
-  # ─────────────────────────────────────────────────────────────
-  # 🌐 Nginx Web Server
-  # ─────────────────────────────────────────────────────────────
+  # 🌐 Nginx
   web:
     image: nginx:alpine
     container_name: crm_web
     restart: always
     ports:
-      - "${APP_PORT:-8000}:80"
+      - "8000:80"
     volumes:
       - .:/var/www/html:ro
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./storage/logs/nginx:/var/log/nginx
     depends_on:
-      app:
-        condition: service_healthy
+      - app
     networks:
       - crm_network
-    healthcheck:
-      test: ["CMD", "wget", "-q", "--spider", "http://localhost/health"]
-      interval: 10s
-      timeout: 5s
-      retries: 3
-      start_period: 10s
 
-  # ─────────────────────────────────────────────────────────────
-  # 📨 Queue Worker (Meta → Redis → Telegram)
-  # ─────────────────────────────────────────────────────────────
+  # 📨 Queue Worker
   queue_worker:
     build:
       context: .
       dockerfile: Dockerfile
-      target: app
     container_name: crm_queue
     restart: always
     working_dir: /var/www/html
-    command: php artisan queue:work redis --sleep=3 --tries=3 --max-time=3600 --memory=256
+    command: php artisan queue:work redis --sleep=3 --tries=3
     volumes:
       - .:/var/www/html
-      - ./storage/logs:/var/www/html/storage/logs
+      - /var/www/html/vendor
     environment:
-      APP_ENV: ${APP_ENV:-production}
+      APP_ENV: production
       DB_CONNECTION: pgsql
       DB_HOST: db
-      DB_PORT: 5432
-      DB_DATABASE: ${DB_DATABASE:-crm_db}
-      DB_USERNAME: ${DB_USERNAME:-crm_user}
-      DB_PASSWORD: ${DB_PASSWORD:-CrmSecurePass2024}
+      DB_DATABASE: crm_db
+      DB_USERNAME: crm_user
+      DB_PASSWORD: CrmSecurePass2024
       REDIS_HOST: redis
-      REDIS_PORT: 6379
       QUEUE_CONNECTION: redis
     depends_on:
-      db:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-      app:
-        condition: service_healthy
+      - app
+      - redis
     networks:
       - crm_network
-    healthcheck:
-      test: ["CMD-SHELL", "php artisan queue:monitor redis:default --max=100 || exit 0"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 15s
 
-  # ─────────────────────────────────────────────────────────────
-  # 🤖 Telegram Bot Worker
-  # ─────────────────────────────────────────────────────────────
+  # 🤖 Telegram Bot
   bot_worker:
     build:
       context: .
       dockerfile: Dockerfile
-      target: app
     container_name: crm_bot
     restart: always
     working_dir: /var/www/html
     command: php artisan telegram:worker
     volumes:
       - .:/var/www/html
-      - ./storage/logs:/var/www/html/storage/logs
+      - /var/www/html/vendor
     environment:
-      APP_ENV: ${APP_ENV:-production}
+      APP_ENV: production
       DB_CONNECTION: pgsql
       DB_HOST: db
-      DB_PORT: 5432
-      DB_DATABASE: ${DB_DATABASE:-crm_db}
-      DB_USERNAME: ${DB_USERNAME:-crm_user}
-      DB_PASSWORD: ${DB_PASSWORD:-CrmSecurePass2024}
+      DB_DATABASE: crm_db
+      DB_USERNAME: crm_user
+      DB_PASSWORD: CrmSecurePass2024
       REDIS_HOST: redis
-      REDIS_PORT: 6379
       QUEUE_CONNECTION: redis
     depends_on:
-      db:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-      app:
-        condition: service_healthy
+      - app
+      - redis
     networks:
       - crm_network
-    healthcheck:
-      test: ["CMD-SHELL", "pgrep -f 'telegram:worker' || exit 1"]
-      interval: 15s
-      timeout: 5s
-      retries: 3
-      start_period: 20s
 
-  # ─────────────────────────────────────────────────────────────
-  # ⏰ Laravel Scheduler
-  # ─────────────────────────────────────────────────────────────
+  # ⏰ Scheduler
   scheduler:
     build:
       context: .
       dockerfile: Dockerfile
-      target: app
     container_name: crm_scheduler
     restart: always
     working_dir: /var/www/html
-    command: sh -c "while true; do php artisan schedule:run --verbose --no-interaction; sleep 60; done"
+    command: sh -c "while true; do php artisan schedule:run; sleep 60; done"
     volumes:
       - .:/var/www/html
-      - ./storage/logs:/var/www/html/storage/logs
+      - /var/www/html/vendor
     environment:
-      APP_ENV: ${APP_ENV:-production}
+      APP_ENV: production
       DB_CONNECTION: pgsql
       DB_HOST: db
-      DB_PORT: 5432
-      DB_DATABASE: ${DB_DATABASE:-crm_db}
-      DB_USERNAME: ${DB_USERNAME:-crm_user}
-      DB_PASSWORD: ${DB_PASSWORD:-CrmSecurePass2024}
+      DB_DATABASE: crm_db
+      DB_USERNAME: crm_user
+      DB_PASSWORD: CrmSecurePass2024
       REDIS_HOST: redis
-      REDIS_PORT: 6379
       QUEUE_CONNECTION: redis
     depends_on:
-      db:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
+      - app
+      - redis
     networks:
       - crm_network
 
-# ─────────────────────────────────────────────────────────────
-# 🔗 Networks
-# ─────────────────────────────────────────────────────────────
 networks:
   crm_network:
     driver: bridge
 
-# ─────────────────────────────────────────────────────────────
-# 💾 Volumes
-# ─────────────────────────────────────────────────────────────
 volumes:
   crm_db_data:
-    driver: local
-  crm_redis_data:
-    driver: local
